--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^7.0.0",
     "google-ads-node": "^1.7.1",
     "googleapis": "^39.1.0",
+    "inquirer": "^6.2.2",
     "opn": "^6.0.0",
     "server-destroy": "^1.0.1"
   },
