--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ CLIENT_ID=INSERT_OAUTH2_CLIENT_ID_HERE
 CLIENT_SECRET=INSERT_OAUTH2_CLIENT_SECRET_HERE
 REFRESH_TOKEN=INSERT_OAUTH2_REFRESH_TOKEN_HERE
 DEVELOPER_TOKEN=INSERT_DEVELOPER_TOKEN_HERE
+LOGIN_CUSTOMER_ID=INSERT_LOGIN_CUSTOMER_ID_HERE
